--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="personal-portfolio/main.css">
 <!--NAVIGATION-->
 <nav>
   <ul id="navbar">
