--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <header>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+  </header>
 <!--NAVIGATION-->
 <nav>
   <ul id="navbar">
