--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <header>
+  <head>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-  </header>
+  </head>
 <!--NAVIGATION-->
 <nav>
   <ul id="navbar">
